--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,10 +4,13 @@
 * @Astro-Phile
 
 # Frontend folder owned by frontend team
-#/client/ @frontend-dev1 @frontend-dev2
+# /client/ @frontend-dev1 @frontend-dev2
 
 # Backend folder owned by backend team
 /server/ @Princess-Irulan
 
 # Docs owned by technical writer 
-#docs/ @techwriter
+ /docs/ @karoltacang
+
+# design assets owned by core designer
+# /design/
